# whisk-cli

./: Cargo.toml
src/: main.rs
