[package]
name = "whisk-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.19", features = [ "serde" ] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tui = { version = "0.14", default-features = false, features = ['crossterm', 'serde'] }
xplr = "0.19"
dirs = "1.0.4"
uuid = { version = "1.2.2", features = ["v4"] }
thiserror = "1.0"